Add WindowsCompatibility reference Fix build errors for new packages

--- a/Samples/BeanTrader/NetFx/BeanTraderClient/Resources/Styles.xaml
+++ b/Samples/BeanTrader/NetFx/BeanTraderClient/Resources/Styles.xaml
@@ -7,7 +7,7 @@
     </Style>
 
     <Style x:Key="DefaultWindowStyle" TargetType="{x:Type mahAppsControls:MetroWindow}">
-        <Setter Property="TitleCaps" Value="False" />
+        <Setter Property="TitleCharacterCasing" Value="False" />
     </Style>
 
     <Style x:Key="DefaultControlStyle" TargetType="{x:Type Control}">
